[package]
name = "concept"
authors = ["Robert Greener"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
belief-spread = "0.10.1"
clap = { version = "3.2.22", features = ["derive"] }
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.65"
log = "0.4.17"
rand = "0.8.5"
simple_logger = "4.0.0"
by_address = "1.0.4"
zstd = "0.11.2"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
lto = true
